# work

code_test/C/: malloc_2dim_array.c  malloc_3dim_array.c  test.c  text.c
code_test/C++/: Cmake.md
code_test/C++/GL/: OpenGL.md
code_test/C++/Theta_test/: ThetaS+KVS.md
code_test/C++/doc/: Cmake.md
code_test/C++_/: CMakeLists.txt  text.cpp
code_test/C++_/GL/: EGL_test.cpp  EGL_test_tex.cpp  EGL_test_texture.cpp  README.md  num256.yuv  square.cpp  square_2.cpp  square_3.cpp  square_4.cpp  square_5d.cpp  square_6d.cpp  square_7.cpp  square_8.cpp  square_9_vbo_tex.cpp  test_Config.cpp  triangle.cpp  triangle_2.cpp
code_test/C/GL/: EGL.md  EGL関数.md  EGL関数_サーフェスのコンフィグレーション.md  EGL関数_レンダリングエリア作成.md  GLSL.md  GL関数.md  GL関数_VBO_VAO.md  OpenGL.md  error.md  シェーダ.md  座標.md  描画.md  関数.md
code_test/python/: Ellipse.py  built-in.md  class-in-class.md  tkinter.py
doc/: ThetaS+KVS.md  gstreamer.md  ソケット通信.md
doc/C/: C.md  malloc.md  ポインタ_配列.md  文字列.md
doc/C#/: C#.md  CommonlyUse.md  LINQ.md  excel.md  foreach.md  int_cast.md  introduction.md  lamda.md  list.md  log.md
doc/C++/: MAP.md  mqtt.md  static.md  数字ー文字変換.md  文字列操作.md  標準出力.md
doc/JAVA/: java.md
doc/Linux/: command.md
doc/SQL/: SQL.md  SQL_2.md  操作方法.md
doc/flutter/: introduction.md  設計について.md
doc/vscode/: Cmake.md  c_cpp_properties_json.md  make.md  tasks_json.md
doc/画像処理/: Image_processing.md  WebRTC.md  YUV.md  gstreamer.md  memo.md  tesseract.md  グラフィックス処理.md  図法.md  画像.md
doc/画像処理/GL/: EGL.md  (+8 more)
todo/: 仕様.md
todo/App/: hello_test.dart
todo/todo_aoolication_1/: README.md  pubspec.yaml
(+25 files in other folders)
